[package]
name = "miniwin"
version = "0.1.0"
authors = ["SLIMPANDA\\janio <jani.peltonen@gmail.com>"]
edition = "2018"

[profile.release]
lto = true 
codegen-units = 1    # should be 1, test diff
opt-level = "z"       # is this highest  
panic = 'abort'
# rustflags = ["-C", "target-cpu=native", "--emit=obj"]       #??? to emit the obj files not sure about first two
# rustflags = ["--emit=obj"]       #??? to emit the obj files not sure about first two

[profile.dev]
lto = true 
opt-level = 0
panic = "abort"

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "processthreadsapi" ] }
