[package]
name = "miniwin"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>", "SLIMPANDA\\janio <jani.peltonen@gmail.com>"]
edition = "2018"

[features]
logger = []
fullscreen = []

[profile.release]
lto = true 
codegen-units = 1    # should be 1, test diff
opt-level = "z"       # is this highest  
panic = 'abort'

[profile.dev]
lto = true 
opt-level = 0
panic = "abort"

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "processthreadsapi", "fileapi", "handleapi", "mmreg", "mmsystem", "mmeapi" ] }

